tools/verilog-to-tfhe/parser.js
module.exports = /*
 * Generated by PEG.js 0.10.0.
 *
 * http://pegjs.org/
 */
(function() {
  "use strict";

  function peg$subclass(child, parent) {
    function ctor() { this.constructor = child; }
    ctor.prototype = parent.prototype;
    child.prototype = new ctor();
  }

  function peg$SyntaxError(message, expected, found, location) {
    this.message  = message;
    this.expected = expected;
    this.found    = found;
    this.location = location;
    this.name     = "SyntaxError";

    if (typeof Error.captureStackTrace === "function") {
      Error.captureStackTrace(this, peg$SyntaxError);
    }
  }

  peg$subclass(peg$SyntaxError, Error);

  peg$SyntaxError.buildMessage = function(expected, found) {
    var DESCRIBE_EXPECTATION_FNS = {
          literal: function(expectation) {
            return "\"" + literalEscape(expectation.text) + "\"";
          },

          "class": function(expectation) {
            var escapedParts = "",
                i;

            for (i = 0; i < expectation.parts.length; i++) {
              escapedParts += expectation.parts[i] instanceof Array
                ? classEscape(expectation.parts[i][0]) + "-" + classEscape(expectation.parts[i][1])
                : classEscape(expectation.parts[i]);
            }

            return "[" + (expectation.inverted ? "^" : "") + escapedParts + "]";
          },

          any: function(expectation) {
            return "any character";
          },

          end: function(expectation) {
            return "end of input";
          },

          other: function(expectation) {
            return expectation.description;
          }
        };

    function hex(ch) {
      return ch.charCodeAt(0).toString(16).toUpperCase();
    }

    function literalEscape(s) {
      return s
        .replace(/\\/g, '\\\\')
        .replace(/"/g,  '\\"')
        .replace(/\0/g, '\\0')
        .replace(/\t/g, '\\t')
        .replace(/\n/g, '\\n')
        .replace(/\r/g, '\\r')
        .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
        .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
    }

    function classEscape(s) {
      return s
        .replace(/\\/g, '\\\\')
        .replace(/\]/g, '\\]')
        .replace(/\^/g, '\\^')
        .replace(/-/g,  '\\-')
        .replace(/\0/g, '\\0')
        .replace(/\t/g, '\\t')
        .replace(/\n/g, '\\n')
        .replace(/\r/g, '\\r')
        .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
        .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
    }

    function describeExpectation(expectation) {
      return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
    }

    function describeExpected(expected) {
      var descriptions = new Array(expected.length),
          i, j;

      for (i = 0; i < expected.length; i++) {
        descriptions[i] = describeExpectation(expected[i]);
      }

      descriptions.sort();

      if (descriptions.length > 0) {
        for (i = 1, j = 1; i < descriptions.length; i++) {
          if (descriptions[i - 1] !== descriptions[i]) {
            descriptions[j] = descriptions[i];
            j++;
          }
        }
        descriptions.length = j;
      }

      switch (descriptions.length) {
        case 1:
          return descriptions[0];

        case 2:
          return descriptions[0] + " or " + descriptions[1];

        default:
          return descriptions.slice(0, -1).join(", ")
            + ", or "
            + descriptions[descriptions.length - 1];
      }
    }

    function describeFound(found) {
      return found ? "\"" + literalEscape(found) + "\"" : "end of input";
    }

    return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
  };

  function peg$parse(input, options) {
    options = options !== void 0 ? options : {};

    var peg$FAILED = {},

        peg$startRuleFunctions = { Document: peg$parseDocument },
        peg$startRuleFunction  = peg$parseDocument,

        peg$c0 = "\n\n",
        peg$c1 = peg$literalExpectation("\n\n", false),
        peg$c2 = function(m) { return m; },
        peg$c3 = "/* Generated by Yosys",
        peg$c4 = peg$literalExpectation("/* Generated by Yosys", false),
        peg$c5 = /^[^*]/,
        peg$c6 = peg$classExpectation(["*"], true, false),
        peg$c7 = "*/",
        peg$c8 = peg$literalExpectation("*/", false),
        peg$c9 = "module ",
        peg$c10 = peg$literalExpectation("module ", false),
        peg$c11 = "(",
        peg$c12 = peg$literalExpectation("(", false),
        peg$c13 = ");\n",
        peg$c14 = peg$literalExpectation(");\n", false),
        peg$c15 = "endmodule\n",
        peg$c16 = peg$literalExpectation("endmodule\n", false),
        peg$c17 = function(name, decls, gates, assignments) {
                return {
                    type: "module",
                    name: name.value,
                    decls: decls,
                    gates: gates,
                    assignments: assignments
                };
            },
        peg$c18 = ", ",
        peg$c19 = peg$literalExpectation(", ", false),
        peg$c20 = "  wire ",
        peg$c21 = peg$literalExpectation("  wire ", false),
        peg$c22 = " ",
        peg$c23 = peg$literalExpectation(" ", false),
        peg$c24 = ";\n",
        peg$c25 = peg$literalExpectation(";\n", false),
        peg$c26 = function(size, name) { return {
            type: "wire",
            size: size === null ? 1 : size[0],
            name: name.value
        }; },
        peg$c27 = "  input ",
        peg$c28 = peg$literalExpectation("  input ", false),
        peg$c29 = function(size, name) { return {
            type: "input",
            size: size === null ? 1 : size[0],
            name: name.value
        }; },
        peg$c30 = "  output ",
        peg$c31 = peg$literalExpectation("  output ", false),
        peg$c32 = function(size, name) { return {
            type: "output",
            size: size === null ? 1 : size[0],
            name: name.value
        }; },
        peg$c33 = "  assign ",
        peg$c34 = peg$literalExpectation("  assign ", false),
        peg$c35 = " = ",
        peg$c36 = peg$literalExpectation(" = ", false),
        peg$c37 = function(dst, src) { return {
            type: "assignment",
            src: src,
            dst: dst
        }; },
        peg$c38 = /^[0-9]/,
        peg$c39 = peg$classExpectation([["0", "9"]], false, false),
        peg$c40 = "'h",
        peg$c41 = peg$literalExpectation("'h", false),
        peg$c42 = /^[0-9a-f]/,
        peg$c43 = peg$classExpectation([["0", "9"], ["a", "f"]], false, false),
        peg$c44 = function(v) { return {
            hex: v.join("")
        }; },
        peg$c45 = "{ ",
        peg$c46 = peg$literalExpectation("{ ", false),
        peg$c47 = " }",
        peg$c48 = peg$literalExpectation(" }", false),
        peg$c49 = function(head, tail) {
            return ((head === null) ? [] : head.map(it => it[0])).concat(tail);
        },
        peg$c50 = "  NOT _",
        peg$c51 = peg$literalExpectation("  NOT _", false),
        peg$c52 = "_ (\n",
        peg$c53 = peg$literalExpectation("_ (\n", false),
        peg$c54 = "    .A(",
        peg$c55 = peg$literalExpectation("    .A(", false),
        peg$c56 = "),\n",
        peg$c57 = peg$literalExpectation("),\n", false),
        peg$c58 = "    .Z(",
        peg$c59 = peg$literalExpectation("    .Z(", false),
        peg$c60 = ")\n",
        peg$c61 = peg$literalExpectation(")\n", false),
        peg$c62 = "  );\n",
        peg$c63 = peg$literalExpectation("  );\n", false),
        peg$c64 = function(a, z) { return {
            type: "gate",
            gate: "not",
            src: a,
            dst: z
        }; },
        peg$c65 = "  AND _",
        peg$c66 = peg$literalExpectation("  AND _", false),
        peg$c67 = "    .B(",
        peg$c68 = peg$literalExpectation("    .B(", false),
        peg$c69 = function(a, b, z) { return {
            type: "gate",
            gate: "and",
            a: a,
            b: b,
            z: z
        }; },
        peg$c70 = "  ANDYN _",
        peg$c71 = peg$literalExpectation("  ANDYN _", false),
        peg$c72 = function(a, b, z) { return {
            type: "gate",
            gate: "andyn",
            a: a,
            b: b,
            z: z
        }; },
        peg$c73 = "  NAND _",
        peg$c74 = peg$literalExpectation("  NAND _", false),
        peg$c75 = function(a, b, z) { return {
            type: "gate",
            gate: "nand",
            a: a,
            b: b,
            z: z
        }; },
        peg$c76 = "  OR _",
        peg$c77 = peg$literalExpectation("  OR _", false),
        peg$c78 = function(a, b, z) { return {
            type: "gate",
            gate: "or",
            a: a,
            b: b,
            z: z
        }; },
        peg$c79 = "  ORYN _",
        peg$c80 = peg$literalExpectation("  ORYN _", false),
        peg$c81 = function(a, b, z) { return {
            type: "gate",
            gate: "oryn",
            a: a,
            b: b,
            z: z
        }; },
        peg$c82 = "  NOR _",
        peg$c83 = peg$literalExpectation("  NOR _", false),
        peg$c84 = function(a, b, z) { return {
            type: "gate",
            gate: "nor",
            a: a,
            b: b,
            z: z
        }; },
        peg$c85 = "  XOR _",
        peg$c86 = peg$literalExpectation("  XOR _", false),
        peg$c87 = function(a, b, z) { return {
            type: "gate",
            gate: "xor",
            a: a,
            b: b,
            z: z
        }; },
        peg$c88 = "  XNOR _",
        peg$c89 = peg$literalExpectation("  XNOR _", false),
        peg$c90 = function(a, b, z) { return {
            type: "gate",
            gate: "xnor",
            a: a,
            b: b,
            z: z
        }; },
        peg$c91 = "  MUX _",
        peg$c92 = peg$literalExpectation("  MUX _", false),
        peg$c93 = "    .F(",
        peg$c94 = peg$literalExpectation("    .F(", false),
        peg$c95 = "    .SEL(",
        peg$c96 = peg$literalExpectation("    .SEL(", false),
        peg$c97 = "    .T(",
        peg$c98 = peg$literalExpectation("    .T(", false),
        peg$c99 = function(f, sel, t, z) { return {
            type: "gate",
            gate: "mux",
            t: t,
            f: f,
            sel: sel,
            z: z
        }; },
        peg$c100 = "[",
        peg$c101 = peg$literalExpectation("[", false),
        peg$c102 = ":",
        peg$c103 = peg$literalExpectation(":", false),
        peg$c104 = "]",
        peg$c105 = peg$literalExpectation("]", false),
        peg$c106 = function(begin, end) {
            return parseInt(begin.join("")) - parseInt(end.join("")) + 1;
        },
        peg$c107 = "_",
        peg$c108 = peg$literalExpectation("_", false),
        peg$c109 = function(n) { return {
                type: "identifier",
                value: "_" + n.join("") + "_"
            }; },
        peg$c110 = /^[A-Za-z0-9]/,
        peg$c111 = peg$classExpectation([["A", "Z"], ["a", "z"], ["0", "9"]], false, false),
        peg$c112 = function(name, index) { return {
                type: "identifier",
                value: name.join(""),
                index: index
            }; },
        peg$c113 = "\\",
        peg$c114 = peg$literalExpectation("\\", false),
        peg$c115 = /^[^ ]/,
        peg$c116 = peg$classExpectation([" "], true, false),
        peg$c117 = function(name) { return {
                type: "identifier",
                value: name.join("")
            }; },
        peg$c118 = function(begin, end) { return {
            begin: parseInt(begin.join("")),
            end: end === null ? null : parseInt(end.slice(1).join(""))
        }; },

        peg$currPos          = 0,
        peg$savedPos         = 0,
        peg$posDetailsCache  = [{ line: 1, column: 1 }],
        peg$maxFailPos       = 0,
        peg$maxFailExpected  = [],
        peg$silentFails      = 0,

        peg$result;

    if ("startRule" in options) {
      if (!(options.startRule in peg$startRuleFunctions)) {
        throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
      }

      peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
    }

    function text() {
      return input.substring(peg$savedPos, peg$currPos);
    }

    function location() {
      return peg$computeLocation(peg$savedPos, peg$currPos);
    }

    function expected(description, location) {
      location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

      throw peg$buildStructuredError(
        [peg$otherExpectation(description)],
        input.substring(peg$savedPos, peg$currPos),
        location
      );
    }

    function error(message, location) {
      location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

      throw peg$buildSimpleError(message, location);
    }

    function peg$literalExpectation(text, ignoreCase) {
      return { type: "literal", text: text, ignoreCase: ignoreCase };
    }

    function peg$classExpectation(parts, inverted, ignoreCase) {
      return { type: "class", parts: parts, inverted: inverted, ignoreCase: ignoreCase };
    }

    function peg$anyExpectation() {
      return { type: "any" };
    }

    function peg$endExpectation() {
      return { type: "end" };
    }

    function peg$otherExpectation(description) {
      return { type: "other", description: description };
    }

    function peg$computePosDetails(pos) {
      var details = peg$posDetailsCache[pos], p;

      if (details) {
        return details;
      } else {
        p = pos - 1;
        while (!peg$posDetailsCache[p]) {
          p--;
        }

        details = peg$posDetailsCache[p];
        details = {
          line:   details.line,
          column: details.column
        };

        while (p < pos) {
          if (input.charCodeAt(p) === 10) {
            details.line++;
            details.column = 1;
          } else {
            details.column++;
          }

          p++;
        }

        peg$posDetailsCache[pos] = details;
        return details;
      }
    }

    function peg$computeLocation(startPos, endPos) {
      var startPosDetails = peg$computePosDetails(startPos),
          endPosDetails   = peg$computePosDetails(endPos);

      return {
        start: {
          offset: startPos,
          line:   startPosDetails.line,
          column: startPosDetails.column
        },
        end: {
          offset: endPos,
          line:   endPosDetails.line,
          column: endPosDetails.column
        }
      };
    }

    function peg$fail(expected) {
      if (peg$currPos < peg$maxFailPos) { return; }

      if (peg$currPos > peg$maxFailPos) {
        peg$maxFailPos = peg$currPos;
        peg$maxFailExpected = [];
      }

      peg$maxFailExpected.push(expected);
    }

    function peg$buildSimpleError(message, location) {
      return new peg$SyntaxError(message, null, null, location);
    }

    function peg$buildStructuredError(expected, found, location) {
      return new peg$SyntaxError(
        peg$SyntaxError.buildMessage(expected, found),
        expected,
        found,
        location
      );
    }

    function peg$parseDocument() {
      var s0, s1, s2, s3, s4;

      s0 = peg$currPos;
      s1 = peg$parseHeader();
      if (s1 !== peg$FAILED) {
        if (input.substr(peg$currPos, 2) === peg$c0) {
          s2 = peg$c0;
          peg$currPos += 2;
        } else {
          s2 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c1); }
        }
        if (s2 !== peg$FAILED) {
          s3 = [];
          s4 = peg$parseModule();
          if (s4 !== peg$FAILED) {
            while (s4 !== peg$FAILED) {
              s3.push(s4);
              s4 = peg$parseModule();
            }
          } else {
            s3 = peg$FAILED;
          }
          if (s3 !== peg$FAILED) {
            peg$savedPos = s0;
            s1 = peg$c2(s3);
            s0 = s1;
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }

      return s0;
    }

    function peg$parseHeader() {
      var s0, s1, s2, s3;

      s0 = peg$currPos;
      if (input.substr(peg$currPos, 21) === peg$c3) {
        s1 = peg$c3;
        peg$currPos += 21;
      } else {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c4); }
      }
      if (s1 !== peg$FAILED) {
        s2 = [];
        if (peg$c5.test(input.charAt(peg$currPos))) {
          s3 = input.charAt(peg$currPos);
          peg$currPos++;
        } else {
          s3 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c6); }
        }
        if (s3 !== peg$FAILED) {
          while (s3 !== peg$FAILED) {
            s2.push(s3);
            if (peg$c5.test(input.charAt(peg$currPos))) {
              s3 = input.charAt(peg$currPos);
              peg$currPos++;
            } else {
              s3 = peg$FAILED;
              if (peg$silentFails === 0) { peg$fail(peg$c6); }
            }
          }
        } else {
          s2 = peg$FAILED;
        }
        if (s2 !== peg$FAILED) {
          if (input.substr(peg$currPos, 2) === peg$c7) {
            s3 = peg$c7;
            peg$currPos += 2;
          } else {
            s3 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c8); }
          }
          if (s3 !== peg$FAILED) {
            s1 = [s1, s2, s3];
            s0 = s1;
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }

      return s0;
    }

    function peg$parseModule() {
      var s0, s1, s2, s3, s4, s5, s6, s7, s8, s9;

      s0 = peg$currPos;
      if (input.substr(peg$currPos, 7) === peg$c9) {
        s1 = peg$c9;
        peg$currPos += 7;
      } else {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c10); }
      }
      if (s1 !== peg$FAILED) {
        s2 = peg$parseIdentifier();
        if (s2 !== peg$FAILED) {
          if (input.charCodeAt(peg$currPos) === 40) {
            s3 = peg$c11;
            peg$currPos++;
          } else {
            s3 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c12); }
          }
          if (s3 !== peg$FAILED) {
            s4 = peg$parseModuleArgList();
            if (s4 !== peg$FAILED) {
              if (input.substr(peg$currPos, 3) === peg$c13) {
                s5 = peg$c13;
                peg$currPos += 3;
              } else {
                s5 = peg$FAILED;
                if (peg$silentFails === 0) { peg$fail(peg$c14); }
              }
              if (s5 !== peg$FAILED) {
                s6 = [];
                s7 = peg$parseWire();
                if (s7 === peg$FAILED) {
                  s7 = peg$parseInput();
                  if (s7 === peg$FAILED) {
                    s7 = peg$parseOutput();
                  }
                }
                if (s7 !== peg$FAILED) {
                  while (s7 !== peg$FAILED) {
                    s6.push(s7);
                    s7 = peg$parseWire();
                    if (s7 === peg$FAILED) {
                      s7 = peg$parseInput();
                      if (s7 === peg$FAILED) {
                        s7 = peg$parseOutput();
                      }
                    }
                  }
                } else {
                  s6 = peg$FAILED;
                }
                if (s6 !== peg$FAILED) {
                  s7 = [];
                  s8 = peg$parseGate();
                  if (s8 !== peg$FAILED) {
                    while (s8 !== peg$FAILED) {
                      s7.push(s8);
                      s8 = peg$parseGate();
                    }
                  } else {
                    s7 = peg$FAILED;
                  }
                  if (s7 !== peg$FAILED) {
                    s8 = [];
                    s9 = peg$parseAssignment();
                    while (s9 !== peg$FAILED) {
                      s8.push(s9);
                      s9 = peg$parseAssignment();
                    }
                    if (s8 !== peg$FAILED) {
                      if (input.substr(peg$currPos, 10) === peg$c15) {
                        s9 = peg$c15;
                        peg$currPos += 10;
                      } else {
                        s9 = peg$FAILED;
                        if (peg$silentFails === 0) { peg$fail(peg$c16); }
                      }
                      if (s9 !== peg$FAILED) {
                        peg$savedPos = s0;
                        s1 = peg$c17(s2, s6, s7, s8);
                        s0 = s1;
                      } else {
                        peg$currPos = s0;
                        s0 = peg$FAILED;
                      }
                    } else {
                      peg$currPos = s0;
                      s0 = peg$FAILED;
                    }
                  } else {
                    peg$currPos = s0;
                    s0 = peg$FAILED;
                  }
                } else {
                  peg$currPos = s0;
                  s0 = peg$FAILED;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }

      return s0;
    }

    function peg$parseModuleArgList() {
      var s0, s1, s2, s3, s4;

      s0 = peg$currPos;
      s1 = [];
      s2 = peg$currPos;
      s3 = peg$parseIdentifier();
      if (s3 !== peg$FAILED) {
        if (input.substr(peg$currPos, 2) === peg$c18) {
          s4 = peg$c18;
          peg$currPos += 2;
        } else {
          s4 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c19); }
        }
        if (s4 !== peg$FAILED) {
          s3 = [s3, s4];
          s2 = s3;
        } else {
          peg$currPos = s2;
          s2 = peg$FAILED;
        }
      } else {
        peg$currPos = s2;
        s2 = peg$FAILED;
      }
      while (s2 !== peg$FAILED) {
        s1.push(s2);
        s2 = peg$currPos;
        s3 = peg$parseIdentifier();
        if (s3 !== peg$FAILED) {
          if (input.substr(peg$currPos, 2) === peg$c18) {
            s4 = peg$c18;
            peg$currPos += 2;
          } else {
            s4 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c19); }
          }
          if (s4 !== peg$FAILED) {
            s3 = [s3, s4];
            s2 = s3;
          } else {
            peg$currPos = s2;
            s2 = peg$FAILED;
          }
        } else {
          peg$currPos = s2;
          s2 = peg$FAILED;
        }
      }
      if (s1 !== peg$FAILED) {
        s2 = peg$parseIdentifier();
        if (s2 !== peg$FAILED) {
          s1 = [s1, s2];
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }

      return s0;
    }

    function peg$parseWire() {
      var s0, s1, s2, s3, s4;

      s0 = peg$currPos;
      if (input.substr(peg$currPos, 7) === peg$c20) {
        s1 = peg$c20;
        peg$currPos += 7;
      } else {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c21); }
      }
      if (s1 !== peg$FAILED) {
        s2 = peg$currPos;
        s3 = peg$parseSize();
        if (s3 !== peg$FAILED) {
          if (input.charCodeAt(peg$currPos) === 32) {
            s4 = peg$c22;
            peg$currPos++;
          } else {
            s4 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c23); }
          }
          if (s4 !== peg$FAILED) {
            s3 = [s3, s4];
            s2 = s3;
          } else {
            peg$currPos = s2;
            s2 = peg$FAILED;
          }
        } else {
          peg$currPos = s2;
          s2 = peg$FAILED;
        }
        if (s2 === peg$FAILED) {
          s2 = null;
        }
        if (s2 !== peg$FAILED) {
          s3 = peg$parseIdentifier();
          if (s3 !== peg$FAILED) {
            if (input.substr(peg$currPos, 2) === peg$c24) {
              s4 = peg$c24;
              peg$currPos += 2;
            } else {
              s4 = peg$FAILED;
              if (peg$silentFails === 0) { peg$fail(peg$c25); }
            }
            if (s4 !== peg$FAILED) {
              peg$savedPos = s0;
              s1 = peg$c26(s2, s3);
              s0 = s1;
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }

      return s0;
    }

    function peg$parseInput() {
      var s0, s1, s2, s3, s4;

      s0 = peg$currPos;
      if (input.substr(peg$currPos, 8) === peg$c27) {
        s1 = peg$c27;
        peg$currPos += 8;
      } else {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c28); }
      }
      if (s1 !== peg$FAILED) {
        s2 = peg$currPos;
        s3 = peg$parseSize();
        if (s3 !== peg$FAILED) {
          if (input.charCodeAt(peg$currPos) === 32) {
            s4 = peg$c22;
            peg$currPos++;
          } else {
            s4 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c23); }
          }
          if (s4 !== peg$FAILED) {
            s3 = [s3, s4];
            s2 = s3;
          } else {
            peg$currPos = s2;
            s2 = peg$FAILED;
          }
        } else {
          peg$currPos = s2;
          s2 = peg$FAILED;
        }
        if (s2 === peg$FAILED) {
          s2 = null;
        }
        if (s2 !== peg$FAILED) {
          s3 = peg$parseIdentifier();
          if (s3 !== peg$FAILED) {
            if (input.substr(peg$currPos, 2) === peg$c24) {
              s4 = peg$c24;
              peg$currPos += 2;
            } else {
              s4 = peg$FAILED;
              if (peg$silentFails === 0) { peg$fail(peg$c25); }
            }
            if (s4 !== peg$FAILED) {
              peg$savedPos = s0;
              s1 = peg$c29(s2, s3);
              s0 = s1;
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }

      return s0;
    }

    function peg$parseOutput() {
      var s0, s1, s2, s3, s4;

      s0 = peg$currPos;
      if (input.substr(peg$currPos, 9) === peg$c30) {
        s1 = peg$c30;
        peg$currPos += 9;
      } else {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c31); }
      }
      if (s1 !== peg$FAILED) {
        s2 = peg$currPos;
        s3 = peg$parseSize();
        if (s3 !== peg$FAILED) {
          if (input.charCodeAt(peg$currPos) === 32) {
            s4 = peg$c22;
            peg$currPos++;
          } else {
            s4 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c23); }
          }
          if (s4 !== peg$FAILED) {
            s3 = [s3, s4];
            s2 = s3;
          } else {
            peg$currPos = s2;
            s2 = peg$FAILED;
          }
        } else {
          peg$currPos = s2;
          s2 = peg$FAILED;
        }
        if (s2 === peg$FAILED) {
          s2 = null;
        }
        if (s2 !== peg$FAILED) {
          s3 = peg$parseIdentifier();
          if (s3 !== peg$FAILED) {
            if (input.substr(peg$currPos, 2) === peg$c24) {
              s4 = peg$c24;
              peg$currPos += 2;
            } else {
              s4 = peg$FAILED;
              if (peg$silentFails === 0) { peg$fail(peg$c25); }
            }
            if (s4 !== peg$FAILED) {
              peg$savedPos = s0;
              s1 = peg$c32(s2, s3);
              s0 = s1;
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }

      return s0;
    }

    function peg$parseGate() {
      var s0;

      s0 = peg$parseNotGate();
      if (s0 === peg$FAILED) {
        s0 = peg$parseAndGate();
        if (s0 === peg$FAILED) {
          s0 = peg$parseAndYNGate();
          if (s0 === peg$FAILED) {
            s0 = peg$parseNandGate();
            if (s0 === peg$FAILED) {
              s0 = peg$parseOrGate();
              if (s0 === peg$FAILED) {
                s0 = peg$parseOrYNGate();
                if (s0 === peg$FAILED) {
                  s0 = peg$parseNorGate();
                  if (s0 === peg$FAILED) {
                    s0 = peg$parseXorGate();
                    if (s0 === peg$FAILED) {
                      s0 = peg$parseXnorGate();
                      if (s0 === peg$FAILED) {
                        s0 = peg$parseMuxGate();
